[gd_scene load_steps=11 format=3 uid="uid://c5dr54dk0502t"]

[ext_resource type="Texture2D" uid="uid://cgfufcnmd24wf" path="res://UI stuff/Green Palette/ui_green_tetris.png" id="1_ad86f"]
[ext_resource type="Script" path="res://tetris/TetrisGameplay.gd" id="1_urvp2"]
[ext_resource type="Shader" path="res://shaders/grid.gdshader" id="2_0hqmj"]
[ext_resource type="Theme" uid="uid://bkynhi7gd36bl" path="res://themes/menu_btn.tres" id="2_t4frc"]
[ext_resource type="Script" path="res://scripts/tetrisGridBG.gd" id="3_r7ui3"]
[ext_resource type="Script" path="res://tetris/tetrisGround.gd" id="6_43m2v"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_adq1g"]
shader = ExtResource("2_0hqmj")
shader_parameter/rows = 20.0
shader_parameter/columns = 10.0
shader_parameter/lineSize = 0.2
shader_parameter/brightnessAddition = 0.0
shader_parameter/color = Color(0.0818887, 0.114171, 0.121163, 1)
shader_parameter/offsetCentered = true
shader_parameter/offsetOverride = Vector2(0, 0)
shader_parameter/bevel = true
shader_parameter/bevelColor = Color(0.037969, 0.069001, 0.0917762, 1)
shader_parameter/outline = true
shader_parameter/outlineColor = Color(0.215686, 0.282353, 0.305882, 1)

[sub_resource type="GDScript" id="GDScript_v26rg"]
script/source = "extends Button

func _on_button_down():
	get_tree().root.propagate_notification(Globals.NOTIFICATION_MINIGAME_CLOSED)
	find_parent(\"Tetris\").queue_free()
"

[sub_resource type="MeshTexture" id="MeshTexture_s1ek3"]
base_texture = ExtResource("1_ad86f")

[sub_resource type="RectangleShape2D" id="RectangleShape2D_wbp70"]
size = Vector2(30, 30)

[node name="Tetris" type="Node2D"]
script = ExtResource("1_urvp2")

[node name="GravityTicker" type="Timer" parent="."]
unique_name_in_owner = true
wait_time = 0.2

[node name="UI" type="CanvasLayer" parent="."]
layer = 10

[node name="Control" type="Control" parent="UI"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="UI_Overlay" type="Sprite2D" parent="UI/Control"]
position = Vector2(270, 337.5)
scale = Vector2(0.5, 0.5)
texture = ExtResource("1_ad86f")

[node name="GridBG" type="ColorRect" parent="UI/Control"]
editor_description = "x = (1080 * 0.5) / 2 - (size.w / 2) = 120
y = (1350 * 0.5) / 2 - (size.h / 2) = 37"
material = SubResource("ShaderMaterial_adq1g")
layout_mode = 0
offset_left = 120.0
offset_top = 37.0
offset_right = 420.0
offset_bottom = 637.0
color = Color(0, 0, 0, 1)
script = ExtResource("3_r7ui3")

[node name="CloseBtn" type="Button" parent="UI/Control"]
layout_mode = 0
offset_left = 506.0
offset_top = 17.0
offset_right = 522.0
offset_bottom = 38.0
theme = ExtResource("2_t4frc")
text = "X"
script = SubResource("GDScript_v26rg")

[node name="TopOverlay" type="CanvasLayer" parent="UI/Control"]
layer = 12

[node name="Sprite2D" type="Sprite2D" parent="UI/Control/TopOverlay"]
position = Vector2(91, -4)
scale = Vector2(179.5, 342)
texture = SubResource("MeshTexture_s1ek3")

[node name="Ground" type="Area2D" parent="UI"]
disable_mode = 2
script = ExtResource("6_43m2v")

[node name="CollisionShape2D" type="CollisionShape2D" parent="UI/Ground"]
position = Vector2(135, 652)
shape = SubResource("RectangleShape2D_wbp70")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="UI/Ground"]
position = Vector2(315, 652)
shape = SubResource("RectangleShape2D_wbp70")

[node name="CollisionShape2D3" type="CollisionShape2D" parent="UI/Ground"]
position = Vector2(285, 652)
shape = SubResource("RectangleShape2D_wbp70")

[node name="CollisionShape2D4" type="CollisionShape2D" parent="UI/Ground"]
position = Vector2(225, 652)
shape = SubResource("RectangleShape2D_wbp70")

[node name="CollisionShape2D5" type="CollisionShape2D" parent="UI/Ground"]
position = Vector2(255, 652)
shape = SubResource("RectangleShape2D_wbp70")

[node name="CollisionShape2D6" type="CollisionShape2D" parent="UI/Ground"]
position = Vector2(195, 652)
shape = SubResource("RectangleShape2D_wbp70")

[node name="CollisionShape2D7" type="CollisionShape2D" parent="UI/Ground"]
position = Vector2(165, 652)
shape = SubResource("RectangleShape2D_wbp70")

[node name="CollisionShape2D8" type="CollisionShape2D" parent="UI/Ground"]
position = Vector2(345, 652)
shape = SubResource("RectangleShape2D_wbp70")

[node name="CollisionShape2D9" type="CollisionShape2D" parent="UI/Ground"]
position = Vector2(405, 652)
shape = SubResource("RectangleShape2D_wbp70")

[node name="CollisionShape2D10" type="CollisionShape2D" parent="UI/Ground"]
position = Vector2(375, 652)
shape = SubResource("RectangleShape2D_wbp70")

[connection signal="timeout" from="GravityTicker" to="." method="_on_gravity_ticker_timeout"]
[connection signal="button_down" from="UI/Control/CloseBtn" to="UI/Control/CloseBtn" method="_on_button_down"]
